[package]
name = "anchor-token-swap"
version = "3.0.0"
description = "Anchor framework fork Solana Program Library Token Swap"
authors = [
  "Solana Maintainers <maintainers@solana.foundation>",
  "DFS Tech, Inc (Rally)",
]
repository = "https://github.com/rally-dfs/anchor-token-swap/"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
production = []
fuzz = ["arbitrary", "roots"]

[dependencies]
arrayref = "0.3.6"
enum_dispatch = "0.3.7"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.8.0"
spl-math = { version = "0.1", features = ["no-entrypoint"] }
spl-token = { version = "3.2", features = ["no-entrypoint"] }
thiserror = "1.0"
arbitrary = { version = "0.4", features = ["derive"], optional = true }
roots = { version = "0.0.7", optional = true }

[dev-dependencies]
solana-sdk = "1.8.0"
proptest = "1.0"
sim = { path = "./sim" }
roots = "0.0.7"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
