[package]
name = "token-bonding-curve"
version = "3.0.0"
description = "A fork of Solana Program Library Token Swap that implements a linear token bonding curve type"
authors = [
  "Solana Maintainers <maintainers@solana.foundation>",
  "DFS Tech, Inc (Rally)",
]
repository = "https://github.com/rally-dfs/token-bonding-curve/"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
production = []
fuzz = ["arbitrary", "roots"]

[dependencies]
arrayref = "0.3.6"
enum_dispatch = "0.3.7"
num-derive = "0.3.3"
num-traits = "0.2.14"
solana-program = "1.9.5"
spl-math = { version = "0.1.0", features = ["no-entrypoint"] }
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
thiserror = "1.0.30"
arbitrary = { version = "1.0.3", features = ["derive"], optional = true }
roots = { version = "0.0.7", optional = true }
anchor-lang = "0.20.1"

[dev-dependencies]
solana-sdk = "1.9.5"
proptest = "1.0.0"
sim = { path = "./sim" }
roots = "0.0.7"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
